--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
     }
 
     input {
+        background-color: #fafbfc;
         height: 30px;
         width: 100%;
+        border-radius: 4px;
+        padding: 8px;
     }
 
     textarea:focus {
