--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         </section>
 
 </body>
-<script src="jquery-3.3.1.slim.js"></script>
+<script src="jquery-3.4.0.min.js"></script>
 <script src="bundle.js"></script>
 <script>
     function load() {
